corrected position of Tours section - shifted up to close gap with Features section

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -417,4 +417,4 @@ body {
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 50rem 0;
-  margin-top: 15rem; }
+  margin-top: -15rem; }
