--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -25,6 +25,6 @@
 .section-tours {
     background-color: $color-grey-light-1;
     padding: 25rem 0 50rem 0;
-    margin-top: 15rem;  // close up space on RHS
+    margin-top: -15rem;  // close up space on RHS
 }
 
